infrastructure/ms-b/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-b
  namespace: ms-b-ns
  labels:
    app: ms-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-b 
  template:
    metadata:
      labels:
        app: ms-b
    spec:
      containers:
        - name: ms-b
          image: ayari17/ms-b
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: express-port
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
