infrastructure/ms-b/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-b-service
  namespace: ms-b-ns
spec:
  selector:
    app: ms-b
  ports:
  - name: express-port
    protocol: TCP
    port: 80
    targetPort: express-port
